--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   mysql8.0:
-    image: olasz/mysql-spring:0.0.7
+    image: acolasz/mysql-spring:0.0.7
     container_name: mysql-7
     ports:
       - 3380:3306
